<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="last_location">Last Location: %1$f,%2$f \nAccuracy:%3$f m\nProvider:%4$s \nTime:%5$s</string>
    <string name="location">%1$f,%2$f</string>
    <string name="accuracy">Accuracy: %1$f m</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop All</string>
    <string name="start">Start All</string>
    <string name="start_updates">Start Location Updates</string>
    <string name="gps">GPS</string>
    <string name="network">Network</string>
    <string name="fused">Fused</string>
    <string name="no_location_provider_enabled_title">No Location Provider Enabled</string>
    <string name="no_location_provider_enabled_message">Please enable a location provider in Settings.</string>
    <string name="ok">OK</string>
</resources>
